--- a/style.css
+++ b/style.css
@@ -102,13 +102,13 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 45%;
+    height: 30%;
     border-bottom: 1px solid white;
 }
 
 /* Settings Section */
 .settings {
-    height: 45%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -351,4 +351,88 @@ input[type="file"] {
 
 ::-webkit-scrollbar-corner {
     background-color: #333;
+}
+
+/* Custom Character Set styles */
+#customCharacterSetContainer {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    background-color: rgba(20, 20, 20, 1);
+    width: 35%;
+    height: 35%;
+    overflow: hidden;
+    border: 1px white solid;
+    border-radius: 2vh;
+    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    h2{
+        color: white;
+        font-size: 2vh;
+        margin: 1vh;
+        height: 10%;
+    }
+
+    textarea{
+        background-color: #333;
+        color: white;
+        border: 1px solid #bbb;
+        border-radius: 4px;
+        padding: 0.5rem;
+        width: 90%;
+        height: 80%;
+        margin: 0.5rem;
+        font-family: monospace;
+    }
+
+    #saveCustomCharacterSet{
+        color: white;
+        border: 1px solid #bbb;
+        border-radius: 4px;
+        padding: 0.5rem;
+        width: auto; 
+        min-width: 10%; 
+        height: auto; 
+        margin: 0.5rem;
+        background-color: red;
+        pointer-events: none;
+        cursor: not-allowed;
+        transition: background-color 0.3s ease;
+        white-space: nowrap;
+    }
+
+    #saveCustomCharacterSet.canSave{
+        background-color: #333;
+        pointer-events: all;
+        cursor: pointer;
+    }
+    
+    #saveCustomCharacterSet:hover{
+        background-color: #444;
+    }
+
+    #x{
+        color: white;
+        top: 0; 
+        right: 0;
+        position: absolute;
+        margin: 1vh;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;    
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+}
+
+#main.fade{
+    opacity: 0.5;
+    transition: opacity 0.5s ease-in-out;
+}
+
+#customCharacterSetContainer.active{
+    display: flex;
+    opacity: 1;
 }
