--- a/style.css
+++ b/style.css
@@ -102,13 +102,13 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 30%;
+    height: 15%;
     border-bottom: 1px solid white;
 }
 
 /* Settings Section */
 .settings {
-    height: 60%;
+    height: 75%;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -439,4 +439,21 @@ input[type="file"] {
 #customCharacterSetContainer.active{
     display: flex;
     opacity: 1;
+}
+
+/* FILE INPUT STYLING */
+
+.fileLabel {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    border: 0.2vh solid white;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.fileLabel:hover {
+    background-color: #1f1f1f;
 }
